--- a/style.css
+++ b/style.css
@@ -220,6 +220,7 @@ a {
   line-height: 55px;
   color:var(--basic-black);
   font-weight: 500;
+  width: 600px ;
 }
 
 .slider-content p {
@@ -271,24 +272,18 @@ a {
   outline: none;
 }
 
+.slider-controls button.current {
+  border: 3px solid white;
+  border-radius: 50%;
+  background-color: #c4c4c4;
+}
+
 .slider-list-item {
   display: none;
 }
 
 .slide-current{
   display: flex;
-}
-
-.slider-controls button::after {
-  content: "";
-  position: absolute;
-  right: 63px;
-  top: 345px;
-  width: 4px;
-  height: 4px;
-  border: 2px solid #c4c4c4;
-  border-radius: 50%;
-  background-color: white;
 
 }
 
@@ -420,15 +415,13 @@ a {
   line-height: 24px;
 }
 
-.about-item {
+.about-list li {
   font-size: 16px;
   line-height: 44px;
   padding-left: 35px;
-
   background-image: url("img/Rectangle List 1.png");
   background-position: left;
   background-repeat: no-repeat, repeat;
-
 }
 
 /* About Left */
@@ -554,11 +547,11 @@ a {
   opacity: 0.1;
 }
 
-/* Contacs box */
-
+/* Contacts box */
 .contacts {
-  background-image: url("img/map 1.png");
+  background-image: url("img/map_1.png");
   background-position: center;
+  background-repeat: no-repeat;
   height: 416px;
 }
 
@@ -592,6 +585,10 @@ a {
   height: 50px;
 }
 
+.red-a {
+  width: 219px;
+  min-height: 50px;
+}
 /* Footer */
 
 .footer {
@@ -1021,6 +1018,7 @@ a {
   background-color: var(--basic-red);
   border: none;
   outline: none;
+  cursor: pointer;
 }
 
 .templates-text .textButton {
@@ -1070,6 +1068,128 @@ a {
 
 .pagination-item a:active {
   background-color: #D5D5D5 ;
+}
+
+/* Форма */
+
+.form-contact {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  margin: 50px auto;
+  width: 630px;
+  padding: 3em 3em;
+  box-shadow: -10px 10px 50px #AAAAAA;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background-color: white;
+}
+
+.FormFirstRow {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
+
+}
+
+.FormFirstRow a {
+  position: relative;
+  right: -380px;
+  opacity: 0.3;
+}
+
+
+.FormFirstRow a:hover {
+  opacity: 1;
+}
+
+.FormFirstRow a:active {
+  opacity: 0.1;
+}
+
+
+.form-contact .close {
+  display: flex;
+
+}
+
+.secondRow {
+  display: flex;
+}
+
+.form-contact ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.form-contact li {
+  margin-top: 35px;
+  padding-right: 25px;
+}
+
+.form-contact label {
+  display: inline-block;
+  width: 150px;
+  text-align: left;
+  font-size: 14px;
+  font-weight: 700;
+  color: black;
+}
+
+.form-contact input,
+.form-contact textarea {
+  font-family: inherit;
+  font-size: 14px;
+  width: 300px;
+  height: 40px;
+  box-sizing: border-box;
+  border: 2px solid #D7DCDE
+}
+
+.form-contact input,
+.form-contact textarea {
+  padding: 10px 10px;
+}
+
+.form-contact input:hover,
+.form-contact textarea:hover {
+  border-color: #B4B9BB;
+}
+
+.form-contact input:focus,
+.form-contact textarea:focus {
+  border-color: #000;
+}
+
+.form-contact textarea {
+  vertical-align: top;
+  height: 6em;
+  width: 45em;
+}
+
+.button-form {
+  padding: 15px 40px;
+  border-radius: 3px;
+  font-weight: 500;
+  text-align: center;
+  color: var(--basic-white);
+  text-transform: uppercase;
+  background-color: var(--basic-red);
+  border: none;
+  outline: none;
+  margin-top: 35px;
+  width: 250px;
+}
+
+.modal-hidden {
+  display: none;
+}
+
+.modal-show {
+  display: block;
 }
 
 
