--- a/style.css
+++ b/style.css
@@ -296,7 +296,7 @@ a {
   list-style: none;
   margin-top: 80px;
   margin-bottom: 73px;
-  background-image: url("img/Rectangle 1.png");
+  background-image: url("img/Rectangle-1.png");
   background-position: bottom left;
   background-repeat: no-repeat, repeat;
 }
@@ -405,7 +405,7 @@ a {
   display: flex;
   flex-direction: row;
   padding-bottom: 73px;
-  background-image: url("img/Rectangle 1.png");
+  background-image: url("img/Rectangle-1.png");
   background-position: bottom left;
   background-repeat: no-repeat, repeat;
 }
@@ -419,7 +419,7 @@ a {
   font-size: 16px;
   line-height: 44px;
   padding-left: 35px;
-  background-image: url("img/Rectangle List 1.png");
+  background-image: url("img/Rectangle-List-1.png");
   background-position: left;
   background-repeat: no-repeat, repeat;
 }
@@ -530,7 +530,7 @@ a {
   margin-bottom: 70px;
   padding-bottom: 35px;
 
-  background-image: url("img/Rectangle 1.png");
+  background-image: url("img/Rectangle-1.png");
   background-position: bottom left;
   background-repeat: no-repeat, repeat;
 
