--- a/style.css
+++ b/style.css
@@ -296,7 +296,7 @@ a {
   list-style: none;
   margin-top: 80px;
   margin-bottom: 73px;
-  background-image: url("img/Rectangle-1.png");
+  background-image: url("img/rectangle-1.png");
   background-position: bottom left;
   background-repeat: no-repeat, repeat;
 }
@@ -406,7 +406,7 @@ a {
   display: flex;
   flex-direction: row;
   padding-bottom: 73px;
-  background-image: url("img/Rectangle-1.png");
+  background-image: url("img/rectangle-1.png");
   background-position: bottom left;
   background-repeat: no-repeat, repeat;
 }
@@ -420,7 +420,7 @@ a {
   font-size: 16px;
   line-height: 44px;
   padding-left: 35px;
-  background-image: url("img/Rectangle-List-1.png");
+  background-image: url("img/rectangle-List-1.png");
   background-position: left;
   background-repeat: no-repeat, repeat;
 }
@@ -531,7 +531,7 @@ a {
   margin-bottom: 70px;
   padding-bottom: 35px;
 
-  background-image: url("img/Rectangle-1.png");
+  background-image: url("img/rectangle-1.png");
   background-position: bottom left;
   background-repeat: no-repeat, repeat;
 
@@ -575,7 +575,7 @@ a {
 
 .contacts-box p {
   margin-top: 0px;
-  margin-bottom: 30px;
+  margin-bottom: 40px;
   font-size: 16px;
   line-height: 18px;
   color: #666666;
