--- a/style.css
+++ b/style.css
@@ -420,7 +420,7 @@ a {
   font-size: 16px;
   line-height: 44px;
   padding-left: 35px;
-  background-image: url("img/rectangle-List-1.png");
+  background-image: url("img/rectangle-list-1.png");
   background-position: left;
   background-repeat: no-repeat, repeat;
 }
